Fix setup flow to use styling that fixed vertical overflow bug

--- a/frontend/layouts/GatedLayout/_styles.scss
+++ b/frontend/layouts/GatedLayout/_styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   min-height: 100vh;
   align-items: center;
+  justify-content: center;
 
   .flash-message {
     border: 0;
